Fix expandingTextArea heights
#1014

While targets were within a `display: none` container, any
ExpandingTextArea child was not able to figure out its height, so
descriptions would get cut off when expanding inactive group.

--- a/src/clientFilePage/planTab/planView.styl
+++ b/src/clientFilePage/planTab/planView.styl
@@ -40,7 +40,6 @@
 				margin-top 3px
 
 		> .inactiveDataList
-			display none
 			padding 10px
 
 			.sectionHeader
@@ -54,9 +53,6 @@
 
 		&.isExpanded
 			padding-bottom 15px
-
-			> .inactiveDataList
-				display block
 
 
 
